Implemented torso of Interface generation

--- a/cz.lzaruba.modelx/xtend-gen/cz/lzaruba/modelx/generator/.gitignore
+++ b/cz.lzaruba.modelx/xtend-gen/cz/lzaruba/modelx/generator/.gitignore
@@ -1,3 +1,8 @@
 /.ModelXGenerator.java._trace
 /.ModelXGenerator.xtendbin
 /ModelXGenerator.java
+/.EntityGenerator.java._trace
+/.InterfaceGenerator.java._trace
+/.EnumGenerator.java._trace
+/.ClassNames.java._trace
+/.GeneratorUtil.java._trace
